<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:animateLayoutChanges="true"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:gravity="top|center"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="36dp"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    >


    <EditText
        android:id="@+id/amount_input"
        android:hint="@string/amount_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/withdraw_button"
            android:text="@string/withdraw"
            android:layout_weight="50"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/deposit_button"
            android:text="@string/deposit"
            android:layout_weight="50"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        </LinearLayout>
    <TextView
        android:id="@+id/balance_display"
        android:textSize="32sp"
        android:text="@string/balance_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"/>

</LinearLayout>